Adjusting functionalities & CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- FOR QUICK DEV CALLING BOOSTRAP -->
+  <!-- FOR QUICK DEV CALLING BOOSTRAP & FONTS-->
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/font-awesome.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" media="screen">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- MY STYLE AND FONTS -->
   <link rel="stylesheet" href="css/app.css"/>
   <title>JPCreative - ABCD AwardsA</title>
